deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: willsapp
  namespace: dev
  labels:
    app: willsapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: willsapp
  template:
    metadata:
      labels:
        app: willsapp
    spec:
      containers:
        - name: playground
          image: "wil42/playground:v1"
          ports:
            - containerPort: 8888
---
apiVersion: v1
kind: Service
metadata:
  name: willsservice
  namespace: dev
spec:
  selector:
    app: willsapp
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 8888
  type: LoadBalancer
